# wireless_gateway

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cscope.out  partitions.csv  sdkconfig  sdkconfig.old  tags
CodeLibrary/: CMakeLists.txt
devices/virt_inovert_freq/: inovert.txt  inovert_virtual.py
devices/virt_suto_s111/: s111.tbl  s111_virtual.py
json/: CMakeLists.txt  cJSON_helpers.c  cJSON_helpers.h
low_speed_periph/: CMakeLists.txt  low_speed_periph.c
low_speed_periph/include/: low_speed_periph.h
main/: .ws_echo_server.c.swp  CMakeLists.txt  Kconfig.projbuild  LinkedList.c  LinkedList.h  apih_modbus.c  apih_sys.c  apih_uart.c  apih_uart_test.c  app.c  app.h  connection.c  connection.h  file_system_helpers.c  http_server_helpers.c  idf_component.yml  nvs_config.c  sys_def.h  test.c  uart.c  uart.h  web_api.h  web_file_server.c  web_server.c  ws_echo_server.c  ws_server.c
main/flash_data/: index.html  innovert.html  inovert.html  list.html
main/flash_data/terminal/: README.md  index.html  script.js  style.css
tests/integrational/terminal/: package-lock.json  package.json  test_terminal.js
tests/integrational/uart/: send_hello.py
tests/integrational/ws_load/: main.py
tests/integrational/ws_server/: output  requirements.txt  stress_test.py  test_ws_server.py
tftp_server/: CMakeLists.txt  tftp.c  tftp_server.c
tftp_server/include/: tftp_server_wg.h
ws_api/: CMakeLists.txt  ws_api.c
ws_api/include/: ws_api.h
