file(GLOB CL_SOURCES
  "${CMAKE_CURRENT_SOURCE_DIR}/CL/DataStructures/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/CL/Workflow/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/CL/Math/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/CL/Crypto/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/CL/Binary/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/CL/Converters/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/CL/Proto/Src/*.c"
)

set(CL_HEADERS 
  "${CMAKE_CURRENT_SOURCE_DIR}/CL"
  "${CMAKE_CURRENT_SOURCE_DIR}/CL/DataStructures"
  "${CMAKE_CURRENT_SOURCE_DIR}/CL/Workflow"
  "${CMAKE_CURRENT_SOURCE_DIR}/CL/Math"
  "${CMAKE_CURRENT_SOURCE_DIR}/CL/Crypto"
  "${CMAKE_CURRENT_SOURCE_DIR}/CL/Binary"
  "${CMAKE_CURRENT_SOURCE_DIR}/CL/Converters"
  "${CMAKE_CURRENT_SOURCE_DIR}/CL/Proto"
)

idf_component_register(SRCS ${CL_SOURCES} 
                        INCLUDE_DIRS ${CL_HEADERS})
